deployment/k8s_templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mbasic
  labels:
    name: mbasic
    app: mbasic-web
